--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "typescript": "^3.0.1"
   },
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.17.1",
     "@types/express": "^4.17.1",
     "@types/mongoose": "^5.5.17",
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
