--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "license": "ISC",
   "devDependencies": {
     "@types/dotenv": "^6.1.1",
+    "@types/gridfs-stream": "^0.5.32",
     "@types/jsonwebtoken": "^8.3.4",
     "@types/mongoose-sequence": "^3.0.3",
     "@types/mongoose-unique-validator": "^1.0.2",
+    "@types/multer": "^1.3.10",
+    "@types/multer-gridfs-storage": "^4.0.0",
     "@types/socket.io": "^2.1.4",
     "dotenv": "^8.1.0",
     "nodemon": "^1.18.3",
@@ -30,11 +33,15 @@
     "@types/mongoose": "^5.5.17",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.13",
     "mongoose-sequence": "^5.2.2",
     "mongoose-unique-validator": "^2.0.3",
+    "multer": "^1.4.2",
+    "multer-gridfs-storage": "^4.0.1",
     "socket.io": "^2.3.0"
   }
 }
