--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/agenda": "^2.0.6",
     "@types/dotenv": "^6.1.1",
     "@types/gridfs-stream": "^0.5.32",
     "@types/jsonwebtoken": "^8.3.4",
@@ -31,6 +32,7 @@
     "@types/body-parser": "^1.17.1",
     "@types/express": "^4.17.1",
     "@types/mongoose": "^5.5.17",
+    "agenda": "^2.3.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "crypto": "^1.0.1",
